
New find Alias dialog to find and connect to Aliases, use shortcut ctrl alt shift F

The combo box of the SQL result table find function now has an 'exact' entry.

Added SQLLite default driver definition.
 Thanks to Chris Papps

Added default driver definitions for OpenEdge and older 9.1E and 10.0B Progress databases.
 Thanks to Tinco van Engen


Bug fixes:

When file is opened cursor is now positioned at the beginning of the editor.

Fixed missing text resource "Procedures" in Alias schema properties

Fixed error display when connection failed (Resource not found)


3.8.0 (08/29/2017)
==================

Enhancements:

The 'Locale' combo box at menu File --> Global Preferences --> Tab General
  now has an entry 'Don't change'. This entry may prevent translation problems
  and will be the default entry for new installations.

The format floating point numbers can now be user defined.
  See menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'FLOAT, REAL, ...'

Updated French translation. Thanks to Erwan Duroselle.

The SQL result panel can now be hidden and restore by the new 'Toggle minimize results' function.
  Use ctrl shift M, tools popup or right mouse menu of SQL editor.

#555 New features for code completion needed --> Completion for UDTs
  UDT names are now available in code completion and can be configured in the Alias Properties dialog.
  Note: If you find UDTs are not of use in code completion you can switch it off.
        See menu File --> New Session Properties --> Tab 'Code completion' --> Checkbox at bottom.


The new paste history can be called using ctrl+shift+V oder ctrl+shift+insert. It offers to paste
  the content of former copy or cut actions.

Enhancement of feature request #545: New table right mouse menu 'Copy as markdown table'

The minimum number of decimal digits of floating point numbers can now be defined
  (see menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'FLOAT, REAL, ...')